--- a/src/ui/assistant_interface.ui
+++ b/src/ui/assistant_interface.ui
@@ -29,7 +29,7 @@
      <rect>
       <x>0</x>
       <y>540</y>
-      <width>721</width>
+      <width>661</width>
       <height>20</height>
      </rect>
     </property>
@@ -74,6 +74,19 @@
     </property>
     <property name="text">
      <string>Enable Speech Output</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="pushButton_3">
+    <property name="geometry">
+     <rect>
+      <x>660</x>
+      <y>540</y>
+      <width>61</width>
+      <height>23</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Clear Chat</string>
     </property>
    </widget>
   </widget>
